# tender-crm-desktop

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/api/: ApiClient.cpp  ApiClient.h  DtoModels.h
src/delegates/: MoneyDelegate.h
src/dialogs/: EmailDetailDialog.cpp  EmailDetailDialog.h  LinkEmailDialog.cpp  LinkEmailDialog.h  TenderEditDialog.cpp  TenderEditDialog.h
src/models/: EmailsModel.cpp  EmailsModel.h  TendersModel.cpp  TendersModel.h
src/views/: EmailsView.cpp  EmailsView.h  MainWindow.cpp  MainWindow.h  RagView.cpp  RagView.h  SettingsView.cpp  SettingsView.h  TendersView.cpp  TendersView.h
src/widgets/: EmailTextBrowser.cpp  EmailTextBrowser.h
